--- a/source/layout.erb
+++ b/source/layout.erb
@@ -7,6 +7,7 @@
     <%= feed_tag :atom, "#{blog.options.prefix.to_s}/feed.xml", title: "Atom Feed" %>
     <link href='http://fonts.googleapis.com/css?family=Lato:300,400,700' rel='stylesheet' type='text/css'>
     <%= stylesheet_link_tag "all" %>
+    <%= partial "partials/analytics" %>
   </head>
   <body>
 
