--- a/source/index.html.erb
+++ b/source/index.html.erb
@@ -10,12 +10,12 @@ per_page: 10
   <% end %>
 <% end %>
 
-<ul>
+<ul class="posts">
   <% page_articles.each_with_index do |article, i| %>
-    <li>
+    <li class="post">
       <h3><%= link_to article.title, article %></h3>
       <h5><%= article.date.strftime('%b %e') %></h5>
-      <p><%= article.body %></p>
+      <%= article.body %>
     </li>
   <% end %>
 </ul>
