--- a/source/index.html.erb
+++ b/source/index.html.erb
@@ -15,7 +15,8 @@ per_page: 10
     <li class="post">
       <h3><%= link_to article.title, article %></h3>
       <h5><%= article.date.strftime('%b %e') %></h5>
-      <%= article.body %>
+      <%= article.summary %>
+      <%= link_to 'Read more…', article %>
     </li>
   <% end %>
 </ul>
