--- a/source/partials/_nav.erb
+++ b/source/partials/_nav.erb
@@ -1,7 +1,7 @@
 <nav>
   <ul>
     <li>
-      <%= link_to "MathewHartley.com", "index.html", :class => 'blog-title' %>
+      <%= link_to "MathewHartley.com", "/index.html", :class => 'blog-title' %>
     </li>
   </ul>
 </nav>
